--- a/index.ipynb
+++ b/index.ipynb
@@ -330,8 +330,7 @@
    ],
    "source": [
     "salina = cities(-3)\n",
-    "salina\n",
-    "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
+    "salina # {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
   },
   {
