--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "salina = cities(-3)\n",
+    "salina = cities-3)\n",
     "salina # {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
   },
