--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities[5]['Population']\n",
+    "los_cabos_pop = cities[5]['Population']=\n",
     "los_cabos_pop # 288"
    ]
   },
