--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[5]['Population']\n",
+    "los_cabos_pop = cities['Population']\n",
     "los_cabos_pop # 288"
    ]
   },
